changes in todo page design

--- a/html/unique/table.html
+++ b/html/unique/table.html
@@ -1390,27 +1390,27 @@
                       <tbody>
                         <tr>
                           <td class="min-w-[.625rem]  rounded border border-border-light">1</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Erik M. Pate</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">The Bird</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Blue</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light"></td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]  rounded border border-border-light">2</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Larry K. Wyatt</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">Ottandy</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Purple</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light"></td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]  rounded border border-border-light">3</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Patti J. Cortez</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">Orton</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Green</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light"></td>
                         </tr>
                         <tr>
                           <td class="min-w-[.625rem]  rounded border border-border-light">4</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Teena C. Marshall</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">Deo</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Red</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light"></td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light"></td>
                         </tr>
                       </tbody>
                     </table>
