changes alert & avtars page

--- a/html/unique/alert.html
+++ b/html/unique/alert.html
@@ -1279,7 +1279,7 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col flex-wrap gap-2">
-                        <div class="flex justify-between items-center border border-secondary text-secondary px-4 py-3 rounded w-full 2xl:flex-col 2xl:justify-start 2xl:items-start 2xl:gap-2" role="alert">
+                        <div class="flex justify-between items-center border border-secondary text-secondary px-4 py-3 rounded w-full lg:flex-col lg:items-start 2xl:justify-between 2xl:items-center 2xl:gap-2 2md:flex-row 2md:items-center sm:flex-col sm:items-start" role="alert">
                           <div class="flex">
                             <svg class="w-[1.25rem] h-[1.25rem] stroke-secondary mr-2"> 
                               <use href="../../assets/svg/_sprite.svg#Check-Square"> </use>
@@ -1296,7 +1296,7 @@
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
-   &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-secondary text-secondary 2xl:flex-col 2xl:justify-start 2xl:items-start 2xl:gap-2" role="alert"&gt;
+   &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-secondary text-secondary lg:flex-col lg:items-start 2xl:justify-between 2xl:items-center 2xl:gap-2 2md:flex-row 2md:items-center sm:flex-col sm:items-start" role="alert"&gt;
        &lt;div class="flex"&gt;
            +SVG_ICON("Check-Square","w-[1.25rem] h-[1.25rem] stroke-secondary mr-2")
            &lt;p&gt; Accept terms and conditions &lt;/p&gt;
@@ -1328,10 +1328,10 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col flex-wrap gap-2">
-                        <div class="flex justify-between items-center border border-primary text-primary px-4 py-3 rounded w-full lg:flex-col lg:justify-start lg:items-start lg:gap-2" role="alert">
+                        <div class="flex justify-between items-center border border-primary text-primary px-4 py-3 rounded w-full lg:flex-col lg:justify-start lg:items-start lg:gap-2 2md:flex-row 2md:justify-between 2md:items-center sm:flex-col sm:justify-start sm:items-start" role="alert">
                           <p>   Space running out </p>
                           <div>
-                            <button class="btn btn-primary flex items-center py-1 px-3 btn-rounded text-white">
+                            <button class="btn btn-primary flex items-center py-1 px-3 btn-rounded text-white"> 
                               <svg class="w-[1.25rem] h-[1.25rem] stroke-white mr-2"> 
                                 <use href="../../assets/svg/_sprite.svg#Notification"> </use>
                               </svg>
@@ -1344,7 +1344,7 @@
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col flex-wrap gap-2"&gt;
-   &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-primary lg:flex-col lg:justify-start lg:items-start lg:gap-2" role="alert"&gt;
+   &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-primary lg:flex-col lg:justify-start lg:items-start lg:gap-2 2md:flex-row 2md:justify-between 2md:items-center sm:flex-col sm:justify-start sm:items-start" role="alert"&gt;
      &lt;p&gt; Space running out &lt;/p&gt;
      &lt;div&gt;
        &lt;button class="flex px-3 py-1 text-white btn btn-primary btn-rounded"&gt;
