--- a/html/unique/checkout.html
+++ b/html/unique/checkout.html
@@ -885,7 +885,7 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Home"> </use>
-                      </svg><span>Dashboards</span></span>
+                      </svg><span class="sidebar-name">Dashboards</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -897,12 +897,12 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Graph"> </use>
-                      </svg><span>Widgets</span></span></a>
+                      </svg><span class="sidebar-name">Widgets</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Document"> </use>
-                      </svg><span>Page layout</span></span>
+                      </svg><span class="sidebar-name">Page layout</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -916,7 +916,7 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Folder"> </use>
-                      </svg><span>Ui Kits</span></span>
+                      </svg><span class="sidebar-name">Ui Kits</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -937,7 +937,7 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Ticket-Star"> </use>
-                      </svg><span>Bonus Ui</span></span>
+                      </svg><span class="sidebar-name">Bonus Ui</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -960,7 +960,7 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Info-Square"> </use>
-                      </svg><span>Icons</span></span>
+                      </svg><span class="sidebar-name">Icons</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -973,18 +973,18 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="apex-chart.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Chart"> </use>
-                      </svg><span>Apex Chart</span></span></a>
+                      </svg><span class="sidebar-name">Apex Chart</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="wow-animation.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Video"> </use>
-                      </svg><span>Wow Animation</span></span></a>
+                      </svg><span class="sidebar-name">Wow Animation</span></span></a>
                 </li>
                 <li class="title">Applications</li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Chat"> </use>
-                      </svg><span>Chat</span></span>
+                      </svg><span class="sidebar-name">Chat</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -996,12 +996,12 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="calendar.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Calendar"> </use>
-                      </svg><span>Calendar</span></span></a>
+                      </svg><span class="sidebar-name">Calendar</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Bag"> </use>
-                      </svg><span>Ecommerce</span></span>
+                      </svg><span class="sidebar-name">Ecommerce</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -1020,22 +1020,22 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="email.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Message"> </use>
-                      </svg><span>Email</span></span></a>
+                      </svg><span class="sidebar-name">Email</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="kanban-board.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Paper"> </use>
-                      </svg><span>Kanban Board</span></span></a>
+                      </svg><span class="sidebar-name">Kanban Board</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="todo.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Time-Circle"> </use>
-                      </svg><span>Todo</span></span></a>
+                      </svg><span class="sidebar-name">Todo</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#2-User"> </use>
-                      </svg><span>User</span></span>
+                      </svg><span class="sidebar-name">User</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -1048,7 +1048,7 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Paper"> </use>
-                      </svg><span>Forms</span></span>
+                      </svg><span class="sidebar-name">Forms</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -1064,13 +1064,13 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="table.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Graph"> </use>
-                      </svg><span>Tables</span></span></a>
+                      </svg><span class="sidebar-name">Tables</span></span></a>
                 </li>
                 <li class="title">Pages</li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Folder"> </use>
-                      </svg><span>Other Pages</span></span>
+                      </svg><span class="sidebar-name">Other Pages</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -1087,13 +1087,13 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="sample-page.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Paper"> </use>
-                      </svg><span>Sample Page</span></span></a>
+                      </svg><span class="sidebar-name">Sample Page</span></span></a>
                 </li>
                 <li class="title">Miscellaneous</li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Folder"> </use>
-                      </svg><span>Blog</span></span>
+                      </svg><span class="sidebar-name">Blog</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -1105,12 +1105,12 @@
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="knowledgebase.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Scan"> </use>
-                      </svg><span>Knowledgebase</span></span></a>
+                      </svg><span class="sidebar-name">Knowledgebase</span></span></a>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/_sprite.svg#Location"> </use>
-                      </svg><span>Map</span></span>
+                      </svg><span class="sidebar-name">Map</span></span>
                     <svg> 
                       <use href="../../assets/svg/_sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
@@ -1522,9 +1522,10 @@
                 </div>
               </li>
               <li>
-                <div class="flex items-center justify-between"> 
-                  <label class="leading-none text-dark text-sm font-semibold" for="monochrome">Monochrome Mode</label>
-                  <input class="monochrome toggle toggle-primary" id="monochrome" name="monochrome" type="checkbox">
+                <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                  <label class="inline-flex relative items-center cursor-pointer">
+                    <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
+                  </label>
                 </div>
               </li>
             </ul>
