--- a/html/unique/login.html
+++ b/html/unique/login.html
@@ -35,8 +35,9 @@
                 <div>
                   <input type="email" placeholder="Enter your id.." required>
                 </div>
-                <div>
-                  <input type="password" placeholder="Password.." required>
+                <div class="relative">
+                  <input type="password" id="password" name="password" required="" placeholder="Enter your Password..">
+                  <div class="password-icon"><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye"> </i><i class="w-4 h-4 stroke-title right-[25px] rtl:right-unset top-1/2 rtl:left-[25px] absolute -translate-y-1/2  showHidePassword" data-feather="eye-off"> </i></div>
                 </div>
                 <div class="flex justify-between items-center gap-1">
                   <div class="flex items-center gap-2">
@@ -132,9 +133,10 @@
               </div>
             </li>
             <li>
-              <div class="flex items-center justify-between"> 
-                <label class="leading-none text-dark text-sm font-semibold" for="monochrome">Monochrome Mode</label>
-                <input class="monochrome toggle toggle-primary" id="monochrome" name="monochrome" type="checkbox">
+              <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+                <label class="inline-flex relative items-center cursor-pointer">
+                  <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
+                </label>
               </div>
             </li>
           </ul>
