chat modal Javascript

--- a/html/document/index.html
+++ b/html/document/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark" lang="en">
+<html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,8 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&amp;display=swap" rel="stylesheet">
     <!-- Custom Select css-->
     <link rel="stylesheet" href="../../assets/css/vendors/custom-select.css">
-    <!-- prism css-->
-    <link rel="stylesheet" href="../../assets/css/vendors/prism.css">
     <!-- App css-->
     <link rel="stylesheet" href="../../assets/css/style.css">
   </head>
@@ -35,7 +33,7 @@
                     <use href="../../assets/svg/sprite.svg#Category"> </use>
                   </svg>
                 </button>
-                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Dark Layout</h1>
+                <h1 class="flex items-center gap-1 text-lg font-extrabold leading-none sm:hidden 4xl:text-base">Unique Dashboard</h1>
               </div>
               <div class="right-header flex items-center flex-1 sm:gap-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] gap-[calc(16px_+_(20_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))]  justify-end">
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
@@ -732,9 +730,9 @@
                               <use href="../../assets/svg/sprite.svg#Home"> </use>
                             </svg></a></li>
                         <li class="px-2"> <span>/</span></li>
-                        <li class="breadcrumb-items capitalize">Page Layout</li>
+                        <li class="breadcrumb-items capitalize">dashboard</li>
                         <li class="px-2"> <span>/</span></li>
-                        <li class="breadcrumb-items capitalize active">Dark Layout</li>
+                        <li class="breadcrumb-items capitalize active">unique</li>
                       </ol>
                     </nav>
                   </div>
@@ -777,70 +775,60 @@
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Home"> </use>
-                      </svg><span class="sidebar-name">Getting started</span></span></a></li>
+                      </svg><span class="sidebar-name">Getting started</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Graph"> </use>
-                      </svg><span class="sidebar-name">File structure</span></span></a></li>
+                      </svg><span class="sidebar-name">File structure</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Working with gulp</span></span></a></li>
+                      </svg><span class="sidebar-name">Working with gulp</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Home"> </use>
-                      </svg><span class="sidebar-name">Working with tailwind</span></span></a></li>
+                      </svg><span class="sidebar-name">Working with tailwind</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Graph"> </use>
-                      </svg><span class="sidebar-name">App List</span></span></a></li>
+                      </svg><span class="sidebar-name">App List</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Layouts</span></span></a></li>
+                      </svg><span class="sidebar-name">Layouts</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Starter kit</span></span></a></li>
+                      </svg><span class="sidebar-name">Starter kit</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Remove Customizer</span></span></a></li>
+                      </svg><span class="sidebar-name">Remove Customizer</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Thank you</span></span></a></li>
+                      </svg><span class="sidebar-name">Thank you</span></span></a>
+                </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="javascript:void(0)"><span> 
                       <svg> 
                         <use href="../../assets/svg/sprite.svg#Document"> </use>
-                      </svg><span class="sidebar-name">Change log</span></span></a></li>
+                      </svg><span class="sidebar-name">Change log</span></span></a>
+                </li>
               </ul>
             </nav>
           </aside>
         </div>
         <!-- Sidebar End -->
         <!-- Page Body Start-->
-        <div class="page-body">
-          <div class="grid grid-cols-12 gap-card-gap">
-            <div class="col-span-12">
-              <div class="card">
-                <div class="card-header pb-2 header-bottom-border">
-                  <h3 class="font-bold text-title">Sample Card</h3>
-                  <p class="text-content3">Subtitle here</p>
-                </div>
-                <div class="card-body">
-                  <p>"In a first ever statement of this kind, Santa Clause has stated that he is imposing a lifetime Christmas present embargo on Darren P Smith, after stating that he was "simply appalled" with the behaviour of Darren Smith over the last year.One of Santa's inner circle of elves told the Polar Paper: "I've never seen Santa this irate before. He was shouting with rage so much that his cheeks turned purple and his beard was covered in little flecks of spittle. Darren Smith must have done some pretty naughty things to make him this furious. I mean, a lifetime ban on Christmas presents - it's unheard of!". Considerable speculation has circulated regarding precisely what it is that Darren Smith did to arouse Santa's wrath, but no clear answers have emerged."</p>
-                  <ul class="mt-5 list-decimal list-inside text-content3">
-                    <li>Delete the negative; accentuate the positive!</li>
-                    <li>The great thing about fashion is that it always looks forward.</li>
-                    <li>Fashion moves so quickly that, unless you have.</li>
-                    <li>I have an obsession with details and pattern.</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="page-body"></div>
         <!-- Page Body End -->
         <div class="page-footer 3sm:!px-[10px] fixed bottom-0 xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300 sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
           <p class="text-xs font-semibold text-center text-content">Copyright 2023 © Govo theme by pixelstrap</p>
@@ -930,14 +918,10 @@
   <script src="../../assets/js/feather-custom.js"></script>
   <!-- Select Js -->
   <script src="../../assets/js/custom-select.js"></script>
-  <!-- prism js-->
-  <script src="../../assets/js/prism.js"></script>
   <!-- Sidebar Js -->
   <script src="../../assets/js/sidebar.js"></script>
   <!-- customizer js-->
   <script src="../../assets/js/customizer.js"> </script>
-  <!-- darkLayout js-->
-  <script src="../../assets/js/dark-layout.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
